registry/argocd/components/argocd/argocd-httpproxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    projectcontour.io/tls-cert-namespace: cert-manager
  name: argocd
  namespace: argocd
spec:
  rules:
  - host: argocd.kubelab.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
  tls:
  - hosts:
    - argocd.kubelab.app
    secretName: cert-manager/prod-wildcard-certs
