registry/argocd/components/argocd/argocd-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        path: /
        pathType: Prefix
    host: argocd.homelab.io
  tls:
  - hosts:
      - argocd.homelab.io
    secretName: argocd-tls
